--- a/MySQLTuner/Properties/Resources.resx
+++ b/MySQLTuner/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="Pass" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Recommendation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recommendation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
